# fpo-flyers

./: .feed_hash  .gitignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  example.docx  pyproject.toml
.github/workflows/: generate.yml
docs/: index.html  slideshow.html  style.css
src/fpo_flyers/: __init__.py  change_detection.py  cli.py  feed.py  models.py  renderer.py  scraper.py
src/fpo_flyers/templates/: flyer.html  flyer_ipad.html
tests/: conftest.py
tests/fixtures/: sample_event_page.html  sample_feed.ics
tests/integration/: test_pipeline.py
tests/unit/: test_change_detection.py  test_feed.py  test_models.py  test_renderer.py  test_scraper.py
